--- a/css/styles.css
+++ b/css/styles.css
@@ -932,8 +932,7 @@ section {
     /*========================== FORMATION ========================== */
     .formation-timeline::before { left: 18px; }
     .formation-timeline-item {
-        /*width: calc(100% - 200px);*/
-        width: 50px;
+        width: calc(100% - 200px);
         left: 64px !important;
         transform: translateY(10px)!important;
         text-align: left !important;
